force-app/main/default/objects/Project_Member__c/fields/Member_Number__c.field-meta.xml
<CustomField>
    <fullName>Member_Number__c</fullName>
    <label>Member Number</label>
    <type>AutoNumber</type>
</CustomField>