force-app/main/default/objects/Project_Member__c/fields/UserName__c.field-meta.xml
<CustomField>
    <fullName>UserName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Project Members</relationshipLabel>
    <relationshipName>Project_Members</relationshipName>
    <type>Lookup</type>
</CustomField>